# DevTools-Manager

./: CMakeLists.txt  a.txt  projeto.pro  run.txt  zCompi.txt
build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
build-mingw/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-mingw/DevToolsManager_autogen/: deps  mocs_compilation.cpp
build-mingw/DevToolsManager_autogen/6YEA5652QU/: moc_AddProductDialog.cpp  moc_AddProductDialog.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_ProductManager.cpp  moc_ProductManager.cpp.d
build-mingw/scr/: Makefile  cmake_install.cmake
build-mingw/scr/minimal_autogen/: deps  mocs_compilation.cpp
build-mingw/scr/minimal_autogen/DGKZTCOIDE/: moc_MainWindow.cpp  moc_MainWindow.cpp.d
dados/: produtos.json
frontend/include/: AnimationHelper.h  ProductCard.h  ProductDialog.h  addproductdialog.h  mainwindow.h  product.h  productlistwidget.h  productwidget.h  sidebarwidget.h
frontend/resources/: styles.qss
frontend/scr/: ProductCard.cpp  ProductDialog.cpp  addproductdialog.cpp  animationhelper.cpp  main.cpp  mainwindow.cpp  productlistwidget.cpp  productwidget.cpp  sidebarwidget.cpp
frontend/styles/: style.qss
include/: AddProductDialog.h  Ansi.hpp  CSV.hpp  CatalogUI.hpp  MainWindow.h  Product.h  Product.hpp  ProductManager.h  ProductRepository.hpp  Theme.h
scr/: AddProductDialog.cpp  Ansi.cpp  CMakeLists.txt  CSV.cpp  CatalogUI.cpp  MainWindow.cpp  Product.cpp  ProductManager.cpp  ProductRepository.cpp  Theme.cpp  main.cpp
